--- a/res/pub/front/codinglist.html
+++ b/res/pub/front/codinglist.html
@@ -144,7 +144,7 @@
 			</tr>
 			<tr>
 				<td>wadiz > 지원하기 > 채용공고</td>
-				<td><a href="/res/pub/front/resource/html/recruit_notification.html">recruit_notification.html</a></td>
+				<td><a href="/res/pub/front/resource/html/recruit_notification_back.html">recruit_notification_back.html</a></td>
 				<td></td>
 				<td>2020-04-02</td>
 				<td></td>
@@ -152,9 +152,25 @@
 			</tr>
 			<tr>
 				<td>wadiz > 지원하기 > 채용공고 > 상세</td>
-				<td><a href="/res/pub/front/resource/html/recruit_detail.html">recruit_detail.html</a></td>
+				<td><a href="/res/pub/front/resource/html/recruit_detail_back.html">recruit_detail_back.html</a></td>
 				<td></td>
 				<td>2020-04-16</td>
+				<td></td>
+				<td><span class="state"><span class="complete"></span></span></td>
+			</tr>
+			<tr>
+				<td>wadiz > 지원하기 > 채용공고</td>
+				<td><a href="/res/pub/front/resource/html/recruit_notification.html">recruit_notification.html</a></td>
+				<td></td>
+				<td>2020-11-19</td>
+				<td></td>
+				<td><span class="state"><span class="complete"></span></span></td>
+			</tr>
+			<tr>
+				<td>wadiz > 지원하기 > 채용공고 > 상세</td>
+				<td><a href="/res/pub/front/resource/html/recruit_detail.html">recruit_detail.html</a></td>
+				<td></td>
+				<td>2020-11-19</td>
 				<td></td>
 				<td><span class="state"><span class="complete"></span></span></td>
 			</tr>
