--- a/res/pub/front/resource/html/recruit_detail.html
+++ b/res/pub/front/resource/html/recruit_detail.html
@@ -12,51 +12,18 @@
 </head>
 <body>
 <!-- S : header -->
-<header id="header">
+<header id="header" class="v2 isBg">
 	<div class="header-section">
 		<h1 class="recruit-log sp_wadiz"><a href="#;"><span class="a11y">와디즈 채용</span></a></h1>
 		<div id="desktopMenu">
 			<div class="main-menu-wrap">
 				<ul class="main-menu-list">
 					<!-- [D] Depth-1 활성화 클래스 <li class="mm-1depth is-selected"> -->
-					<li class="mm-1depth"><a href="#;" class="link-1depth">와디즈 소개</a>
-						<div class="mm-sub-box">
-							<ul class="mm-sub-list">
-								<!-- [D] Depth-2 활성화 클래스 <li class="mm-2depth active">-->
-								<li class="mm-2depth"><a href="#;" class="link-2depth">About wadiz</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">Why wadiz</a></li>
-							</ul>
-						</div>
+					<li class="mm-1depth"><a href="https://shincomet.wixsite.com/website-3/trust-wadiz" class="link-1depth">와디즈 소개</a>
 					</li>
-					<li class="mm-1depth"><a href="#;" class="link-1depth">와디즈 인사이드</a>
-						<div class="mm-sub-box">
-							<ul class="mm-sub-list">
-								<li class="mm-2depth"><a href="#;" class="link-2depth">와디즈인 인터뷰</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">와디즈 라이프</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">와디즈 미디어</a></li>
-							</ul>
-						</div>
-					</li>
-					<li class="mm-1depth"><a href="#;" class="link-1depth">지원하기</a>
-						<div class="mm-sub-box">
-							<ul class="mm-sub-list">
-								<li class="mm-2depth"><a href="#;" class="link-2depth">채용절차</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">진행중인 공고</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">문의하기</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">인재풀 등록</a></li>
-							</ul>
-						</div>
-					</li>
-					<li class="mm-1depth"><a href="#;" class="link-1depth">나의 지원서</a>
-						<div class="mm-sub-box">
-							<ul class="mm-sub-list">
-								<li class="mm-2depth"><a href="#;" class="link-2depth">지원서 작성</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">지원서 수정</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">지원서 조회</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">마이페이지</a></li>
-							</ul>
-						</div>
-					</li>
+					<li class="mm-1depth"><a href="https://shincomet.wixsite.com/website-3/%EC%A1%B0%EC%A7%81%EB%AC%B8%ED%99%94" class="link-1depth">조직문화</a></li>
+					<li class="mm-1depth is-selected"><a href="https://www.job.wadiz.kr/recruit/info" class="link-1depth">채용 공고</a></li>
+					<li class="mm-1depth"><a href="https://shincomet.wixsite.com/website-3/blog" class="link-1depth">인사이드 와디즈</a></li>
 				</ul>
 			</div>
 		</div>
@@ -64,44 +31,11 @@
 			<div class="main-menu-wrap">
 				<ul class="main-menu-list">
 					<!-- [D] Depth-1 활성화 클래스 <li class="mm-1depth is-selected"> -->
-					<li class="mm-1depth"><a href="#;" class="link-1depth">와디즈 소개</a>
-						<div class="mm-sub-box">
-							<ul class="mm-sub-list">
-								<!-- [D] Depth-2 활성화 클래스 <li class="mm-2depth active">-->
-								<li class="mm-2depth"><a href="#;" class="link-2depth">About wadiz</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">Why wadiz</a></li>
-							</ul>
-						</div>
+					<li class="mm-1depth"><a href="https://shincomet.wixsite.com/website-3/trust-wadiz" class="link-1depth">와디즈 소개</a>
 					</li>
-					<li class="mm-1depth"><a href="#;" class="link-1depth">와디즈 인사이드</a>
-						<div class="mm-sub-box">
-							<ul class="mm-sub-list">
-								<li class="mm-2depth"><a href="#;" class="link-2depth">와디즈인 인터뷰</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">와디즈 라이프</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">와디즈 미디어</a></li>
-							</ul>
-						</div>
-					</li>
-					<li class="mm-1depth"><a href="#;" class="link-1depth">지원하기</a>
-						<div class="mm-sub-box">
-							<ul class="mm-sub-list">
-								<li class="mm-2depth"><a href="#;" class="link-2depth">채용절차</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">진행중인 공고</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">문의하기</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">인재풀 등록</a></li>
-							</ul>
-						</div>
-					</li>
-					<li class="mm-1depth"><a href="#;" class="link-1depth">나의 지원서</a>
-						<div class="mm-sub-box">
-							<ul class="mm-sub-list">
-								<li class="mm-2depth"><a href="#;" class="link-2depth">지원서 작성</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">지원서 수정</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">지원서 조회</a></li>
-								<li class="mm-2depth"><a href="#;" class="link-2depth">마이페이지</a></li>
-							</ul>
-						</div>
-					</li>
+					<li class="mm-1depth"><a href="https://shincomet.wixsite.com/website-3/%EC%A1%B0%EC%A7%81%EB%AC%B8%ED%99%94" class="link-1depth">조직문화</a></li>
+					<li class="mm-1depth is-selected"><a href="https://www.job.wadiz.kr/recruit/info" class="link-1depth">채용 공고</a></li>
+					<li class="mm-1depth"><a href="https://shincomet.wixsite.com/website-3/blog" class="link-1depth">인사이드 와디즈</a></li>
 				</ul>
 			</div>
 		</div>
@@ -111,10 +45,10 @@
 </header>
 <!-- E : header -->
 
-<div class="container">
+<div class="container v2">
 	<div class="sub-visual-section recruit">
 		<div class="wadiz-inner">
-			<h2 class="page-title">채용정보</h2>
+			<h2 class="page-title"><span class="ir">채용정보</span></h2>
 		</div>
 	</div>
 	<div class="wadiz-inner">
@@ -145,29 +79,32 @@
 	</div>
 
 </div>
-<button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
+<button type="button" class="btn-move-top v2"><span class="a11y">상단으로 이동하기</span></button>
 
-<footer id="footer">
+<footer id="footer" class="v2">
 	<a href="https://www.wadiz.kr/web/main" target="_blank" class="footer-logo sp_wadiz"><span class="a11y">와디즈 홈으로 바로가기</span></a>
-	<ul class="guide-privacy">
-		<li class="gp-item"><button type="button" data-layer="private-layer" class="gp-link">개인정보처리방침</button></li>
-		<li class="gp-item"><button type="button" data-layer="email-layer" class="gp-link">이메일무단수집거부</button></li>
-	</ul>
-	<ul class="sns-list">
-		<li class="sns-item face"><a href="https://www.facebook.com/wadiz.funding" class="sns-link sp_wadiz" target="_blank"><span class="a11y">페이스북 바로가기</span></a></li>
-		<li class="sns-item insta"><a href="https://www.instagram.com/wadiz_reward/" class="sns-link sp_wadiz" target="_blank"><span class="a11y">유투브 바로가기</span></a></li>
-		<li class="sns-item ut"><a href="https://www.youtube.com/channel/UCRF2YAxV9vnzo2khhGCGlZg/featured" class="sns-link sp_wadiz" target="_blank"><span class="a11y">인스타그램 바로가기</span></a></li>
-	</ul>
+	<p>채용에 관해 궁금한 점이 있으시다면 아래로 문의해주세요!</p>
 	<address class="address">
-		<p class="txt-address"><span class="ceo">대표이사 : 최동철</span>사업자 등록 번호 : 220-88-37661 <br>주소 : 경기도 성남시 분당구 판교로 242 (삼평동) 판교디지털센터 A동 4층 402호</p>
+		<p class="txt-address">
+			<span>Tel. 031 - 778 - 8054</span>
+			<span>Email. recruit@wadiz.kr</span>
+			<span class="name">와디즈플랫폼 (주)</span>
+			<span>사업자등록번호 220-88-37661</span>
+			<span>대표이사 최동철</span>
+			<span>경기도 성남시 분당구 판교로 242 (삼평동) 판교디지털센터 A동 4층</span>
+			</p>
 		<div class="footer-logos">
 			<span class="logos-item"><img src="./resource/images/footer_logo-a.jpg" alt=""></span>
 			<span class="logos-item"><img src="./resource/images/footer_logo-b.jpg" alt=""></span>
 		</div>
 	</address>
-	<p class="copyright">© wadiz platform ALL RIGHTS RESERVED.</p>
+	<ul class="sns-list">
+		<li class="sns-item face"><a href="https://www.facebook.com/wadiz.funding" class="sns-link sp_wadiz" target="_blank"><span class="a11y">페이스북 바로가기</span></a></li>
+		<li class="sns-item insta"><a href="https://www.instagram.com/wadiz_reward/" class="sns-link sp_wadiz" target="_blank"><span class="a11y">유투브 바로가기</span></a></li>
+		<li class="sns-item ut"><a href="https://www.youtube.com/channel/UCRF2YAxV9vnzo2khhGCGlZg/featured" class="sns-link sp_wadiz" target="_blank"><span class="a11y">인스타그램 바로가기</span></a></li>
+	</ul>
 </footer>
-<button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
+<button type="button" class="btn-move-top v2"><span class="a11y">상단으로 이동하기</span></button>
 
 <script src="/res/pub/front/resource/js/libs/jquery-1.12.4.min.js"></script>
 <script src="/res/pub/front/resource/js/libs/owl.carousel.js"></script>
