--- a/res/pub/front/resource/html/recruit_notification_back.html
+++ b/res/pub/front/resource/html/recruit_notification_back.html
@@ -12,18 +12,51 @@
 </head>
 <body>
 <!-- S : header -->
-<header id="header" class="v2 isBg">
+<header id="header">
 	<div class="header-section">
 		<h1 class="recruit-log sp_wadiz"><a href="#;"><span class="a11y">와디즈 채용</span></a></h1>
 		<div id="desktopMenu">
 			<div class="main-menu-wrap">
 				<ul class="main-menu-list">
 					<!-- [D] Depth-1 활성화 클래스 <li class="mm-1depth is-selected"> -->
-					<li class="mm-1depth"><a href="https://shincomet.wixsite.com/website-3/trust-wadiz" class="link-1depth">와디즈 소개</a>
+					<li class="mm-1depth"><a href="#;" class="link-1depth">와디즈 소개</a>
+						<div class="mm-sub-box">
+							<ul class="mm-sub-list">
+								<!-- [D] Depth-2 활성화 클래스 <li class="mm-2depth active">-->
+								<li class="mm-2depth"><a href="#;" class="link-2depth">About wadiz</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">Why wadiz</a></li>
+							</ul>
+						</div>
 					</li>
-					<li class="mm-1depth"><a href="https://shincomet.wixsite.com/website-3/%EC%A1%B0%EC%A7%81%EB%AC%B8%ED%99%94" class="link-1depth">조직문화</a></li>
-					<li class="mm-1depth is-selected"><a href="https://www.job.wadiz.kr/recruit/info" class="link-1depth">채용 공고</a></li>
-					<li class="mm-1depth"><a href="https://shincomet.wixsite.com/website-3/blog" class="link-1depth">인사이드 와디즈</a></li>
+					<li class="mm-1depth"><a href="#;" class="link-1depth">와디즈 인사이드</a>
+						<div class="mm-sub-box">
+							<ul class="mm-sub-list">
+								<li class="mm-2depth"><a href="#;" class="link-2depth">와디즈인 인터뷰</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">와디즈 라이프</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">와디즈 미디어</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="mm-1depth"><a href="#;" class="link-1depth">지원하기</a>
+						<div class="mm-sub-box">
+							<ul class="mm-sub-list">
+								<li class="mm-2depth"><a href="#;" class="link-2depth">채용절차</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">진행중인 공고</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">문의하기</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">인재풀 등록</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="mm-1depth"><a href="#;" class="link-1depth">나의 지원서</a>
+						<div class="mm-sub-box">
+							<ul class="mm-sub-list">
+								<li class="mm-2depth"><a href="#;" class="link-2depth">지원서 작성</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">지원서 수정</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">지원서 조회</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">마이페이지</a></li>
+							</ul>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -31,11 +64,44 @@
 			<div class="main-menu-wrap">
 				<ul class="main-menu-list">
 					<!-- [D] Depth-1 활성화 클래스 <li class="mm-1depth is-selected"> -->
-					<li class="mm-1depth"><a href="https://shincomet.wixsite.com/website-3/trust-wadiz" class="link-1depth">와디즈 소개</a>
+					<li class="mm-1depth"><a href="#;" class="link-1depth">와디즈 소개</a>
+						<div class="mm-sub-box">
+							<ul class="mm-sub-list">
+								<!-- [D] Depth-2 활성화 클래스 <li class="mm-2depth active">-->
+								<li class="mm-2depth"><a href="#;" class="link-2depth">About wadiz</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">Why wadiz</a></li>
+							</ul>
+						</div>
 					</li>
-					<li class="mm-1depth"><a href="https://shincomet.wixsite.com/website-3/%EC%A1%B0%EC%A7%81%EB%AC%B8%ED%99%94" class="link-1depth">조직문화</a></li>
-					<li class="mm-1depth is-selected"><a href="https://www.job.wadiz.kr/recruit/info" class="link-1depth">채용 공고</a></li>
-					<li class="mm-1depth"><a href="https://shincomet.wixsite.com/website-3/blog" class="link-1depth">인사이드 와디즈</a></li>
+					<li class="mm-1depth"><a href="#;" class="link-1depth">와디즈 인사이드</a>
+						<div class="mm-sub-box">
+							<ul class="mm-sub-list">
+								<li class="mm-2depth"><a href="#;" class="link-2depth">와디즈인 인터뷰</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">와디즈 라이프</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">와디즈 미디어</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="mm-1depth"><a href="#;" class="link-1depth">지원하기</a>
+						<div class="mm-sub-box">
+							<ul class="mm-sub-list">
+								<li class="mm-2depth"><a href="#;" class="link-2depth">채용절차</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">진행중인 공고</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">문의하기</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">인재풀 등록</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="mm-1depth"><a href="#;" class="link-1depth">나의 지원서</a>
+						<div class="mm-sub-box">
+							<ul class="mm-sub-list">
+								<li class="mm-2depth"><a href="#;" class="link-2depth">지원서 작성</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">지원서 수정</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">지원서 조회</a></li>
+								<li class="mm-2depth"><a href="#;" class="link-2depth">마이페이지</a></li>
+							</ul>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -45,42 +111,38 @@
 </header>
 <!-- E : header -->
 
-<div class="container v2">
+<div class="container">
 	<div class="sub-visual-section recruit">
 		<div class="wadiz-inner">
-			<h2 class="page-title"><span class="ir">채용정보</span></h2>
+			<h2 class="page-title">채용정보</h2>
 		</div>
 	</div>
 	<div class="wadiz-inner">
 		<div class="recruit-section">
-
-			<div class="intro-area">
-				<div class="intro-title">
-					<span class="tag"><img src="../images/tag_process.png" alt="PROCESS"></span>
-					<h3 class="title">더 나은 세상을 함께 만들어갈 당신을 기다립니다</h3>
+			<ul class="tab-list">
+				<li class="tab-item"><a href="#;" class="tab-link"># 채용절차</a></li>
+				<li class="tab-item active"><a href="#;" class="tab-link"># 채용공고</a></li>
+			</ul>
+			<div class="search-section">
+				<div class="search-box">
+					<div class="search">
+						<input type="search" class="ipt-sch" placeholder="검색어를 입력하세요">
+						<button type="submit" class="btn-search sp_wadiz"><span class="a11y">검색하기</span></button>
+					</div>
 				</div>
-				<div class="intro-cont">
-					<ul class="bul-dot">
-						<li>상황에 따라 1, 2차 면접이 1day면접으로 진행 될 수 있습니다.</li>
-						<li>이력서 제출 순으로 진행되며 채용 시 공고가 조기 마감 될 수 있습니다.</li>
-						<li>개발자의 경우 '개발테스트'를 진행하며 직군별로 실무능력 테스트가 있습니다.</li>
-						<li>경력직은 3개월간 Probation 기간을 거치며 급여는 동일한 수준으로 지급됩니다.</li>
-					</ul>
-					<p class="bul-star">인성검사는 합격/불합격 여부와 상관없이 면접관의 판단에 따라 온라인으로 진행됩니다.</p>
+				<div class="search-result">
+					<!-- [검색결과 있을 경우] -->
+					<p class="result-txt"><span class="keyword primary-color">'기획'</span> 검색결과 <span class="primary-color">5</span>건</p>
+					<!-- [검색결과 없을 경우]-->
+					<p class="result-txt" style="display:none">
+						<span class="keyword primary-color">'기획'</span> 검색조건과 일치하는 결과가 없습니다. <br>
+						다른 키워드로 검색해보세요.
+					</p>
 				</div>
 			</div>
 
-			<div class="process-area">
-				<ol class="process-list">
-					<li><span>서류전형</span></li>
-					<li class="secondary"><span>실무진 면접 인성검사</span></li>
-					<li><span>임원 면접</span></li>
-					<li><span>처우 협의</span></li>
-					<li class="primary"><span>최종합격</span></li>
-				</ol>
-			</div>
-			
-			<div class="desktop-select">
+			<!-- [D] 검색결과가 나타탈 경우 숨김 처리 -->
+			<div class="desktop-select" style="display:none">
 				<a href="#;" class="fake-menu active">#전체</a>
 				<a href="#;" class="fake-menu">#기술</a>
 				<a href="#;" class="fake-menu">#프로덕트</a>
@@ -90,8 +152,8 @@
 				<a href="#;" class="fake-menu">#브랜딩/디자인</a>
 				<a href="#;" class="fake-menu">#인재풀</a>
 			</div>
-			
-			<div class="select-box full">
+			<!-- [D] 검색결과가 나타탈 경우 숨김 처리 -->
+			<div class="select-box full" style="display:none">
 				<select class="select full" name="" id="">
 					<option value="">전체보기</option>
 					<option value="">기술</option>
@@ -204,32 +266,29 @@
 
 
 </div>
-<button type="button" class="btn-move-top v2"><span class="a11y">상단으로 이동하기</span></button>
+<button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
 
-<footer id="footer" class="v2">
+<footer id="footer">
 	<a href="https://www.wadiz.kr/web/main" target="_blank" class="footer-logo sp_wadiz"><span class="a11y">와디즈 홈으로 바로가기</span></a>
-	<p>채용에 관해 궁금한 점이 있으시다면 아래로 문의해주세요!</p>
-	<address class="address">
-		<p class="txt-address">
-			<span>Tel. 031 - 778 - 8054</span>
-			<span>Email. recruit@wadiz.kr</span>
-			<span class="name">와디즈플랫폼 (주)</span>
-			<span>사업자등록번호 220-88-37661</span>
-			<span>대표이사 최동철</span>
-			<span>경기도 성남시 분당구 판교로 242 (삼평동) 판교디지털센터 A동 4층</span>
-			</p>
-		<div class="footer-logos">
-			<span class="logos-item"><img src="./resource/images/footer_logo-a.jpg" alt=""></span>
-			<span class="logos-item"><img src="./resource/images/footer_logo-b.jpg" alt=""></span>
-		</div>
-	</address>
+	<ul class="guide-privacy">
+		<li class="gp-item"><button type="button" data-layer="private-layer" class="gp-link">개인정보처리방침</button></li>
+		<li class="gp-item"><button type="button" data-layer="email-layer" class="gp-link">이메일무단수집거부</button></li>
+	</ul>
 	<ul class="sns-list">
 		<li class="sns-item face"><a href="https://www.facebook.com/wadiz.funding" class="sns-link sp_wadiz" target="_blank"><span class="a11y">페이스북 바로가기</span></a></li>
 		<li class="sns-item insta"><a href="https://www.instagram.com/wadiz_reward/" class="sns-link sp_wadiz" target="_blank"><span class="a11y">유투브 바로가기</span></a></li>
 		<li class="sns-item ut"><a href="https://www.youtube.com/channel/UCRF2YAxV9vnzo2khhGCGlZg/featured" class="sns-link sp_wadiz" target="_blank"><span class="a11y">인스타그램 바로가기</span></a></li>
 	</ul>
+	<address class="address">
+		<p class="txt-address"><span class="ceo">대표이사 : 최동철</span>사업자 등록 번호 : 220-88-37661 <br>주소 : 경기도 성남시 분당구 판교로 242 (삼평동) 판교디지털센터 A동 4층 402호</p>
+		<div class="footer-logos">
+			<span class="logos-item"><img src="./resource/images/footer_logo-a.jpg" alt=""></span>
+			<span class="logos-item"><img src="./resource/images/footer_logo-b.jpg" alt=""></span>
+		</div>
+	</address>
+	<p class="copyright">© wadiz platform ALL RIGHTS RESERVED.</p>
 </footer>
-<button type="button" class="btn-move-top v2"><span class="a11y">상단으로 이동하기</span></button>
+<button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
 
 
 <script src="/res/pub/front/resource/js/libs/jquery-1.12.4.min.js"></script>
