이전 수정본

--- a/res/pub/front/resource/html/recruit_detail.html
+++ b/res/pub/front/resource/html/recruit_detail.html
@@ -69,11 +69,11 @@
 				</div>
 			</div>
 			<p class="content-info-txt not-pc">*위 공고에 관심이 있으신 분은 아래 "관심 포지션 등록"에 등록해주세요. 기입해주신 연락처로 포지션 정보 및 지원 방법을 안내해 드리겠습니다.</p>
-			<div class="align-box tar">
-				<a href="#;" class="btn-type">목록</a>
-				<a href="#;" class="btn-type">지원하기</a>
-				<a href="#;" class="btn-type">지원서 수정하기</a>
-				<a href="https://app.smartsheet.com/b/form/d0eadbabed164f4183d6927c3f2b42d8" class="btn-type not-pc" target="_blank">관심 포지션 등록</a>
+			<div class="align-box tac">
+				<a href="#;" class="btn-type dark">목록</a>
+				<a href="#;" class="btn-type dark">지원서 작성</a>
+				<a href="#;" class="btn-type dark">지원서 수정</a>
+				<a href="https://app.smartsheet.com/b/form/d0eadbabed164f4183d6927c3f2b42d8" class="btn-type dark not-pc" target="_blank">관심 포지션 등록</a>
 			</div>
 		</div>
 	</div>
@@ -82,12 +82,11 @@
 <button type="button" class="btn-move-top v2"><span class="a11y">상단으로 이동하기</span></button>
 
 <footer id="footer" class="v2">
-	<a href="https://www.wadiz.kr/web/main" target="_blank" class="footer-logo sp_wadiz"><span class="a11y">와디즈 홈으로 바로가기</span></a>
+	<a href="https://www.wadiz.kr/web/main" target="_blank" class="footer-logo sp_wadiz"><img src="/res/pub/front/resource/images/bi_wadiz.svg" alt="와디즈 채용"><span class="a11y">와디즈 홈으로 바로가기</span></a>
 	<p>채용에 관해 궁금한 점이 있으시다면 아래로 문의해주세요!</p>
 	<address class="address">
 		<p class="txt-address">
-			<span>Tel. 031 - 778 - 8054</span>
-			<span>Email. recruit@wadiz.kr</span>
+			<span>Email. team.recruit.@wadiz.kr</span>
 			<span class="name">와디즈플랫폼 (주)</span>
 			<span>사업자등록번호 220-88-37661</span>
 			<span>대표이사 최동철</span>
