--- a/res/pub/front/resource/html/recruit_notification.html
+++ b/res/pub/front/resource/html/recruit_notification.html
@@ -56,7 +56,7 @@
 
 			<div class="intro-area">
 				<div class="intro-title">
-					<span class="tag"><img src="../images/tag_process.png" alt="PROCESS"></span>
+					<span class="tag"><img src="/res/pub/front/resource/images/tag_process.svg" alt="PROCESS" width="80"></span>
 					<h3 class="title">더 나은 세상을 함께 만들어갈 당신을 기다립니다</h3>
 				</div>
 				<div class="intro-cont">
@@ -207,7 +207,7 @@
 <button type="button" class="btn-move-top v2"><span class="a11y">상단으로 이동하기</span></button>
 
 <footer id="footer" class="v2">
-	<a href="https://www.wadiz.kr/web/main" target="_blank" class="footer-logo sp_wadiz"><span class="a11y">와디즈 홈으로 바로가기</span></a>
+	<a href="https://www.wadiz.kr/web/main" target="_blank" class="footer-logo sp_wadiz"><img src="/res/pub/front/resource/images/bi_wadiz.svg" alt="와디즈 채용"><span class="a11y">와디즈 홈으로 바로가기</span></a>
 	<p>채용에 관해 궁금한 점이 있으시다면 아래로 문의해주세요!</p>
 	<address class="address">
 		<p class="txt-address">
@@ -225,8 +225,8 @@
 	</address>
 	<ul class="sns-list">
 		<li class="sns-item face"><a href="https://www.facebook.com/wadiz.funding" class="sns-link sp_wadiz" target="_blank"><span class="a11y">페이스북 바로가기</span></a></li>
-		<li class="sns-item insta"><a href="https://www.instagram.com/wadiz_reward/" class="sns-link sp_wadiz" target="_blank"><span class="a11y">유투브 바로가기</span></a></li>
-		<li class="sns-item ut"><a href="https://www.youtube.com/channel/UCRF2YAxV9vnzo2khhGCGlZg/featured" class="sns-link sp_wadiz" target="_blank"><span class="a11y">인스타그램 바로가기</span></a></li>
+		<li class="sns-item ut"><a href="https://www.youtube.com/channel/UCRF2YAxV9vnzo2khhGCGlZg/featured" class="sns-link sp_wadiz" target="_blank"><span class="a11y">유튜브 바로가기</span></a></li>
+		<li class="sns-item insta"><a href="https://www.instagram.com/wadiz_funding/" class="sns-link sp_wadiz" target="_blank"><span class="a11y">인스타그램 바로가기</span></a></li>
 	</ul>
 </footer>
 <button type="button" class="btn-move-top v2"><span class="a11y">상단으로 이동하기</span></button>
