--- a/res/pub/front/resource/html/recruit_detail.html
+++ b/res/pub/front/resource/html/recruit_detail.html
@@ -71,8 +71,8 @@
 			<p class="content-info-txt not-pc">*위 공고에 관심이 있으신 분은 아래 "관심 포지션 등록"에 등록해주세요. 기입해주신 연락처로 포지션 정보 및 지원 방법을 안내해 드리겠습니다.</p>
 			<div class="align-box tac">
 				<a href="#;" class="btn-type dark">목록</a>
-				<a href="#;" class="btn-type dark">지원서 작성</a>
-				<a href="#;" class="btn-type dark">지원서 수정</a>
+				<a href="#;" class="btn-type dark not-mb">지원서 작성</a>
+				<a href="#;" class="btn-type dark not-mb">지원서 수정</a>
 				<a href="https://app.smartsheet.com/b/form/d0eadbabed164f4183d6927c3f2b42d8" class="btn-type dark not-pc" target="_blank">관심 포지션 등록</a>
 			</div>
 		</div>
