--- a/res/pub/front/resource/html/recruit_notification.html
+++ b/res/pub/front/resource/html/recruit_notification.html
@@ -104,6 +104,12 @@
 			</div>
 
 			<div class="bbs-type">
+				<!-- S : search box -->
+				<div class="bbs-search">
+					<input type="text" placeholder="직무 검색하기">
+				</div>
+				<!-- // E : search box -->
+
 				<ul class="bbs-list">
 					<li class="bbs-item">
 						<div class="bbs-col col-lg">
